exports[`test should render a default Slide 1`] = `
<div
  aria-hidden={null}
  className="terraClinical-Slide">
  <div
    className="terraClinical-Slide-shadow" />
  <div>
    Slide Content
  </div>
</div>
`;

exports[`test should render a hidden Slide 1`] = `
<div
  aria-hidden={true}
  className="terraClinical-Slide">
  <div
    className="terraClinical-Slide-shadow" />
  <div>
    Slide Content
  </div>
</div>
`;
